# snowcrash

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: allocator.cpp.98DB46799FD21D1F.idx  allocator.hpp.D277E9B238F20EDC.idx  core.cpp.D6DCDF48D4201CB6.idx  core.hpp.E222CDFFAF543D6F.idx  doctest.h.5DC1B3BE245EE72B.idx  main.cpp.8E777F6BB8E5DE54.idx  test_core.cpp.8135C3DF66F0473D.idx  test_main.cpp.DA37ACACE982B28D.idx
editor/: CMakeLists.txt
editor/src/editor/: main.cpp
snowcrash/: CMakeLists.txt
snowcrash/resources/SCPrimitaves/shaders/: compile.py
snowcrash/src/: snowcrash_config.hpp.in
snowcrash/src/snowcrash/container/: allocator.cpp  allocator.hpp  array.hpp  arraylist.hpp  hashmap.hpp  pair.hpp  result.hpp  string.cpp  string.hpp
snowcrash/src/snowcrash/core/: core.cpp  core.hpp  logging.cpp  logging.hpp  object.cpp  object.hpp  uuid.cpp  uuid.hpp
snowcrash/src/snowcrash/engine/: engine.cpp  engine.hpp
snowcrash/src/snowcrash/math/: rect.hpp  vector.cpp  vector.hpp
snowcrash/src/snowcrash/parsers/: image.hpp
snowcrash/src/snowcrash/resource/: resource.cpp  resource.hpp  resource_cache.cpp  resource_cache.hpp  resource_image.cpp  resource_image.hpp  resource_model.cpp  resource_model.hpp  resource_package.hpp  resource_shader.cpp  resource_shader.hpp
testing/: CMakeLists.txt
testing/resources/spritesheet/: Sprite-0002.json
testing/resources/tileset/: data.json
testing/src/: test_core.cpp  test_main.cpp
